# cpupower-gui-qt

./: AUTHORS  README.md
cpupower_gui/: config.py  cpupower-gui-helper.py.in  cpupower-gui.in  helper.py  main.py  meson.build  utils.py  window.py
data/: meson.build  org.rnd2.cpupower_gui.desktop.in.in
